fixed the overlapping grids bug and it works when you load from saved pages too

--- a/browser/scss/create-layout/main.scss
+++ b/browser/scss/create-layout/main.scss
@@ -52,6 +52,10 @@ button:hover {
 
 }
 
+.nested-buttons {
+  margin-left: 10px;
+}
+
 .toolbar {
   position: fixed;
   padding: 100px 0px 0px 0px;
